# distributed-mean-estimation

./: LICENSE  README.md  setup.cfg
.github/workflows/: publish.yml  test.yml
notebooks/: eden_presentation.ipynb  fractional_bits.ipynb  linear_eden.ipynb  mse.ipynb  rotation.ipynb  rounding.ipynb  sparsification.ipynb
src/cmprs/: __init__.py  clipping.py  common.py  config.py  kashin.py  random_utils.py  reshape.py  rounding.py  scale.py  sparsification.py  split.py  transform.py
src/cmprs/bitrate/: __init__.py  huffman_coding.py  optimal.py  recursive_elias_coding.py
src/cmprs/eden/: __init__.py  drive.py  linear.py
src/cmprs/eden/quantization/: cluster_distribution.py  quantizer.py
src/cmprs/eden/quantization/delta/: __init__.py
src/cmprs/eden/quantization/entropy_delta/: __init__.py  entropy_delta_centroids_mpf.npz  entropy_delta_eps_mpf.npz  entropy_deltas_mpf.npz  precalc.py
src/cmprs/eden/quantization/opt/: __init__.py  lloyd_max_1d_symmetric.py  opt_centroids_mpf.npz  opt_eps_mpf.npz  precalc.py
src/cmprs/metrics/: mse.py  vec_generators.py
src/cmprs/rotations/: hadamard.py  uniform.py
tests/: test_distributed_mean_estimation.py
