[metadata]
name = distributed-mean-estimation
version = 0.1a1
author = Amit Portnoy
author_email = amit.portnoy@gmail.com
description = Algorithms for Distributed Mean Estimation (DME) in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amitport/distributed-mean-estimation
project_urls =
    Bug Tracker = https://github.com/amitport/distributed-mean-estimation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    torch >=1.10
    hadamard-transform == 0.1.*

[options.extras_require]
test = pytest
preprocess =
    sympy == 1.10.*
    tqdm == 4.*

[options.packages.find]
where = src